--- a/src/Marie_test.ipynb
+++ b/src/Marie_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,11 @@
     "import pandas as pd\n",
     "import os\n",
     "import random\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn import datasets\n",
+    "from sklearn import svm"
    ]
   },
   {
@@ -25,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +208,7 @@
        "4              0.2  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +401,7 @@
        "4              0.2  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,13 +412,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Unnamed: 0.1                      int64\n",
        "enzyme_complex_concentration    float64\n",
        "enzyme_concentration            float64\n",
        "k1_bwd_effective                float64\n",
@@ -434,7 +437,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +699,7 @@
        "max                   0.000245         0.500000  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -739,7 +742,7 @@
     "Let's simplify the notation and create a dataframe with new column names and log transformed data\n",
     "\n",
     "\\begin{equation}\n",
-    "y_j = \\beta_j + \\alpha_{E,j} [E] + \\alpha_{ES,j} [ES] + \\alpha_{P,j} [P] + \\alpha_{S,j} [S]\n",
+    "y_j = \\beta_j + \\alpha_{E,j} E_{log} + \\alpha_{ES,j} ES_{log} + \\alpha_{P,j} P_{log} + \\alpha_{S,j} S_{log}\n",
     "\\end{equation}\n",
     "\n",
     "normalization not taken into account for now"
@@ -747,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -881,7 +884,7 @@
        "4  12.706535  3.091042  -9.761988 -11.959213  -9.923690  -8.825078  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -907,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1048,7 +1051,7 @@
        "104  12.706535  3.091042  -9.761988 -11.959213 -11.022305 -10.616837  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1062,12 +1065,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# fit regression\n",
-    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
     "\n",
     "def linear_regression(X,y):\n",
     "    reg = LinearRegression()\n",
@@ -1080,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1113,7 +1116,227 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Try with normalization\n",
+    "### Try with normal normalization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def standardize(x):\n",
+    "    \"\"\"Standardize a column.\"\"\"\n",
+    "    mean_x = np.mean(x)\n",
+    "    x = x - mean_x\n",
+    "    std_x = np.std(x)\n",
+    "    if std_x != 0:\n",
+    "        x = x / std_x\n",
+    "    return x, mean_x, std_x\n",
+    "\n",
+    "def standardize_data(data):\n",
+    "    '''\n",
+    "    normalization of a data_set\n",
+    "    '''\n",
+    "    for i in range(0,data.shape[1]):\n",
+    "        data.iloc[:,i],mean,variance = standardize(data.iloc[:,i])\n",
+    "\n",
+    "    return data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/Marie/anaconda3/lib/python3.6/site-packages/pandas/core/indexing.py:630: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  self.obj[item_labels[indexer[info_axis]]] = value\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mu_mass</th>\n",
+       "      <th>realization</th>\n",
+       "      <th>sigma_mass</th>\n",
+       "      <th>volume_fraction</th>\n",
+       "      <th>y1_bwd</th>\n",
+       "      <th>y1_fwd</th>\n",
+       "      <th>y2_bwd</th>\n",
+       "      <th>y2_fwd</th>\n",
+       "      <th>E</th>\n",
+       "      <th>ES</th>\n",
+       "      <th>P</th>\n",
+       "      <th>S</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-1.566699</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.036951</td>\n",
+       "      <td>-0.170101</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.560472</td>\n",
+       "      <td>-0.477511</td>\n",
+       "      <td>0.771957</td>\n",
+       "      <td>0.590545</td>\n",
+       "      <td>1.371204</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.522233</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.036951</td>\n",
+       "      <td>5.878858</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.560472</td>\n",
+       "      <td>0.771957</td>\n",
+       "      <td>-0.477511</td>\n",
+       "      <td>0.590545</td>\n",
+       "      <td>-0.935994</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.870388</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.368134</td>\n",
+       "      <td>-0.170101</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.560472</td>\n",
+       "      <td>1.142558</td>\n",
+       "      <td>-2.097580</td>\n",
+       "      <td>-1.181090</td>\n",
+       "      <td>1.371204</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.870388</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.036951</td>\n",
+       "      <td>-0.170101</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.560472</td>\n",
+       "      <td>1.142558</td>\n",
+       "      <td>-2.097580</td>\n",
+       "      <td>-0.590545</td>\n",
+       "      <td>0.935992</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>104</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.566699</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.368134</td>\n",
+       "      <td>-0.170101</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.560472</td>\n",
+       "      <td>1.142558</td>\n",
+       "      <td>-2.097580</td>\n",
+       "      <td>-0.935994</td>\n",
+       "      <td>-0.590545</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     mu_mass  realization  sigma_mass  volume_fraction    y1_bwd    y1_fwd  \\\n",
+       "10       0.0    -1.566699         0.0              0.0 -0.036951 -0.170101   \n",
+       "19       0.0    -0.522233         0.0              0.0 -0.036951  5.878858   \n",
+       "41       0.0    -0.870388         0.0              0.0  2.368134 -0.170101   \n",
+       "44       0.0    -0.870388         0.0              0.0 -0.036951 -0.170101   \n",
+       "104      0.0     1.566699         0.0              0.0  2.368134 -0.170101   \n",
+       "\n",
+       "     y2_bwd    y2_fwd         E        ES         P         S  \n",
+       "10      0.0  0.560472 -0.477511  0.771957  0.590545  1.371204  \n",
+       "19      0.0  0.560472  0.771957 -0.477511  0.590545 -0.935994  \n",
+       "41      0.0  0.560472  1.142558 -2.097580 -1.181090  1.371204  \n",
+       "44      0.0  0.560472  1.142558 -2.097580 -0.590545  0.935992  \n",
+       "104     0.0  0.560472  1.142558 -2.097580 -0.935994 -0.590545  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_test_norm = standardize_data(data_test)\n",
+    "data_test_norm.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0.4469944415345816, array([ 0.        ,  0.02499832,  0.02710818, -0.00489228, -0.00539026]))\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = np.c_[np.ones(len(x)), x]\n",
+    "y = data_test['y1_bwd']\n",
+    "\n",
+    "coefficients = linear_regression(X,y)\n",
+    "print(coefficients)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "expected: -1.48e-02, 1.9e-04, 1.89e-05, -2.94e-03, -2.94e-03,\n",
+    "\n",
+    "It's already closer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Try with weird normalization\n",
     "\n",
     "inverse of the conditional standard deviation √𝑉(𝑅|𝑋), is that: S = $\\sqrt(\\frac{SSE}{n-2})$, calculated on the complete dataset, or only per condition? "
    ]
