--- a/src/Marie_test.ipynb
+++ b/src/Marie_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -718,7 +718,7 @@
     "log(\\frac{k_j}{k_{j,0}}) = \\beta_j + \\alpha_{E,j}log(\\frac{[E]}{[E]_0}) + \\alpha_{ES,j}log(\\frac{[ES]}{[ES]_0})  + \\alpha_{P,j}log(\\frac{[P]}{[P]_0})  + \\alpha_{S,j}log(\\frac{[S]}{[S]_0}) \n",
     "\\end{equation*}\n",
     "\n",
-    "where j $\\in$ [1_bwd, 1_fwd, 2_bwd, 2_fwd],\n",
+    "where $j\\in$ [1_bwd, 1_fwd, 2_bwd, 2_fwd],\n",
     "\n",
     "$k$ is the effective rate constant, and $k_0$ is the relative rate constant\n",
     "\n",
@@ -1121,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1146,14 +1146,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/Marie/anaconda3/lib/python3.6/site-packages/pandas/core/indexing.py:630: SettingWithCopyWarning: \n",
+      "/home/charles/anaconda3/lib/python3.6/site-packages/pandas/core/indexing.py:621: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1199,14 +1199,14 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>0.0</td>\n",
+       "      <td>3.886669e-12</td>\n",
        "      <td>-1.566699</td>\n",
+       "      <td>1.090239e-13</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-0.036951</td>\n",
-       "      <td>-0.170101</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.560472</td>\n",
+       "      <td>981.274534</td>\n",
+       "      <td>-4972.244637</td>\n",
+       "      <td>1.163514e-12</td>\n",
+       "      <td>1658.983913</td>\n",
        "      <td>-0.477511</td>\n",
        "      <td>0.771957</td>\n",
        "      <td>0.590545</td>\n",
@@ -1214,14 +1214,14 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
-       "      <td>0.0</td>\n",
+       "      <td>3.886669e-12</td>\n",
        "      <td>-0.522233</td>\n",
+       "      <td>1.090239e-13</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-0.036951</td>\n",
-       "      <td>5.878858</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.560472</td>\n",
+       "      <td>981.274534</td>\n",
+       "      <td>-4966.195678</td>\n",
+       "      <td>1.163514e-12</td>\n",
+       "      <td>1658.983913</td>\n",
        "      <td>0.771957</td>\n",
        "      <td>-0.477511</td>\n",
        "      <td>0.590545</td>\n",
@@ -1229,14 +1229,14 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>41</th>\n",
-       "      <td>0.0</td>\n",
+       "      <td>3.886669e-12</td>\n",
        "      <td>-0.870388</td>\n",
+       "      <td>1.090239e-13</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.368134</td>\n",
-       "      <td>-0.170101</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.560472</td>\n",
+       "      <td>983.679618</td>\n",
+       "      <td>-4972.244637</td>\n",
+       "      <td>1.163514e-12</td>\n",
+       "      <td>1658.983913</td>\n",
        "      <td>1.142558</td>\n",
        "      <td>-2.097580</td>\n",
        "      <td>-1.181090</td>\n",
@@ -1244,14 +1244,14 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>44</th>\n",
-       "      <td>0.0</td>\n",
+       "      <td>3.886669e-12</td>\n",
        "      <td>-0.870388</td>\n",
+       "      <td>1.090239e-13</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-0.036951</td>\n",
-       "      <td>-0.170101</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.560472</td>\n",
+       "      <td>981.274534</td>\n",
+       "      <td>-4972.244637</td>\n",
+       "      <td>1.163514e-12</td>\n",
+       "      <td>1658.983913</td>\n",
        "      <td>1.142558</td>\n",
        "      <td>-2.097580</td>\n",
        "      <td>-0.590545</td>\n",
@@ -1259,14 +1259,14 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>104</th>\n",
-       "      <td>0.0</td>\n",
+       "      <td>3.886669e-12</td>\n",
        "      <td>1.566699</td>\n",
+       "      <td>1.090239e-13</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.368134</td>\n",
-       "      <td>-0.170101</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.560472</td>\n",
+       "      <td>983.679618</td>\n",
+       "      <td>-4972.244637</td>\n",
+       "      <td>1.163514e-12</td>\n",
+       "      <td>1658.983913</td>\n",
        "      <td>1.142558</td>\n",
        "      <td>-2.097580</td>\n",
        "      <td>-0.935994</td>\n",
@@ -1277,22 +1277,29 @@
        "</div>"
       ],
       "text/plain": [
-       "     mu_mass  realization  sigma_mass  volume_fraction    y1_bwd    y1_fwd  \\\n",
-       "10       0.0    -1.566699         0.0              0.0 -0.036951 -0.170101   \n",
-       "19       0.0    -0.522233         0.0              0.0 -0.036951  5.878858   \n",
-       "41       0.0    -0.870388         0.0              0.0  2.368134 -0.170101   \n",
-       "44       0.0    -0.870388         0.0              0.0 -0.036951 -0.170101   \n",
-       "104      0.0     1.566699         0.0              0.0  2.368134 -0.170101   \n",
+       "          mu_mass  realization    sigma_mass  volume_fraction      y1_bwd  \\\n",
+       "10   3.886669e-12    -1.566699  1.090239e-13              0.0  981.274534   \n",
+       "19   3.886669e-12    -0.522233  1.090239e-13              0.0  981.274534   \n",
+       "41   3.886669e-12    -0.870388  1.090239e-13              0.0  983.679618   \n",
+       "44   3.886669e-12    -0.870388  1.090239e-13              0.0  981.274534   \n",
+       "104  3.886669e-12     1.566699  1.090239e-13              0.0  983.679618   \n",
        "\n",
-       "     y2_bwd    y2_fwd         E        ES         P         S  \n",
-       "10      0.0  0.560472 -0.477511  0.771957  0.590545  1.371204  \n",
-       "19      0.0  0.560472  0.771957 -0.477511  0.590545 -0.935994  \n",
-       "41      0.0  0.560472  1.142558 -2.097580 -1.181090  1.371204  \n",
-       "44      0.0  0.560472  1.142558 -2.097580 -0.590545  0.935992  \n",
-       "104     0.0  0.560472  1.142558 -2.097580 -0.935994 -0.590545  "
+       "          y1_fwd        y2_bwd       y2_fwd         E        ES         P  \\\n",
+       "10  -4972.244637  1.163514e-12  1658.983913 -0.477511  0.771957  0.590545   \n",
+       "19  -4966.195678  1.163514e-12  1658.983913  0.771957 -0.477511  0.590545   \n",
+       "41  -4972.244637  1.163514e-12  1658.983913  1.142558 -2.097580 -1.181090   \n",
+       "44  -4972.244637  1.163514e-12  1658.983913  1.142558 -2.097580 -0.590545   \n",
+       "104 -4972.244637  1.163514e-12  1658.983913  1.142558 -2.097580 -0.935994   \n",
+       "\n",
+       "            S  \n",
+       "10   1.371204  \n",
+       "19  -0.935994  \n",
+       "41   1.371204  \n",
+       "44   0.935992  \n",
+       "104 -0.590545  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1304,14 +1311,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0.4469944415345816, array([ 0.        ,  0.02499832,  0.02710818, -0.00489228, -0.00539026]))\n"
+      "(981.758478569384, array([ 0.        ,  0.02499832,  0.02710818, -0.00489228, -0.00539026]))\n"
      ]
     }
    ],
@@ -1365,7 +1372,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
