--- a/src/exploration.ipynb
+++ b/src/exploration.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -15,9 +24,19 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn import datasets\n",
     "from sklearn import svm\n",
+    "import seaborn as sns\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.set()"
    ]
   },
   {
@@ -38,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -240,7 +259,7 @@
        "4                 0.000147              0.2  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -262,7 +281,7 @@
        "(151956, 18)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -302,7 +321,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +511,7 @@
        "4              0.2  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -536,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +580,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,8 +591,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -706,7 +727,7 @@
        "4  12.706535  3.091042  -9.761988 -11.959213 -0.202524 -0.180104  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -720,8 +741,8 @@
     "data_trans['y2_fwd'] = np.log(data_trans['k2_fwd_effective']/data_trans['k2_fwd_relative'])\n",
     "data_trans['E'] = np.log(data_trans['enzyme_concentration'])\n",
     "data_trans['ES'] = np.log(data_trans['enzyme_complex_concentration'])\n",
-    "data_trans['P'] = np.log(data_trans['product_concentration'])/49\n",
-    "data_trans['S'] = np.log(data_trans['substrate_concentration'])/49\n",
+    "data_trans['P'] = np.log(data_trans['product_concentration'])\n",
+    "data_trans['S'] = np.log(data_trans['substrate_concentration'])\n",
     "data_trans.drop(['k1_bwd_effective','k1_bwd_relative', 'k1_fwd_effective',\n",
     "                'k1_fwd_relative', 'k2_bwd_effective', 'k2_bwd_relative',\n",
     "                'k2_fwd_effective', 'k2_fwd_relative', 'enzyme_concentration',\n",
@@ -732,15 +753,224 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 15,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mu_mass</th>\n",
+       "      <th>realization</th>\n",
+       "      <th>sigma_mass</th>\n",
+       "      <th>volume_fraction</th>\n",
+       "      <th>y1_bwd</th>\n",
+       "      <th>y1_fwd</th>\n",
+       "      <th>y2_bwd</th>\n",
+       "      <th>y2_fwd</th>\n",
+       "      <th>E</th>\n",
+       "      <th>ES</th>\n",
+       "      <th>P</th>\n",
+       "      <th>S</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1.519560e+05</td>\n",
+       "      <td>1.519560e+05</td>\n",
+       "      <td>1.519560e+05</td>\n",
+       "      <td>1.519560e+05</td>\n",
+       "      <td>151956.000000</td>\n",
+       "      <td>151956.000000</td>\n",
+       "      <td>1.519560e+05</td>\n",
+       "      <td>151956.000000</td>\n",
+       "      <td>1.519560e+05</td>\n",
+       "      <td>1.519560e+05</td>\n",
+       "      <td>1.519560e+05</td>\n",
+       "      <td>1.519560e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>4.005054e-13</td>\n",
+       "      <td>-4.189661e-16</td>\n",
+       "      <td>-1.581754e-13</td>\n",
+       "      <td>-4.139837e-14</td>\n",
+       "      <td>-16672.173597</td>\n",
+       "      <td>123286.060910</td>\n",
+       "      <td>-3.726086e-11</td>\n",
+       "      <td>-27906.212024</td>\n",
+       "      <td>-1.619518e-12</td>\n",
+       "      <td>-1.748794e-12</td>\n",
+       "      <td>-1.301378e-12</td>\n",
+       "      <td>-1.339471e-12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>1.000003e+00</td>\n",
+       "      <td>1.000003e+00</td>\n",
+       "      <td>1.000003e+00</td>\n",
+       "      <td>1.000003e+00</td>\n",
+       "      <td>1.000003</td>\n",
+       "      <td>1.000003</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>1.000003</td>\n",
+       "      <td>1.000003e+00</td>\n",
+       "      <td>1.000003e+00</td>\n",
+       "      <td>1.000003e+00</td>\n",
+       "      <td>1.000003e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>-1.440188e+00</td>\n",
+       "      <td>-1.566638e+00</td>\n",
+       "      <td>-6.346179e-01</td>\n",
+       "      <td>-1.891130e+00</td>\n",
+       "      <td>-16679.668565</td>\n",
+       "      <td>123285.859216</td>\n",
+       "      <td>-3.726086e-11</td>\n",
+       "      <td>-27910.118093</td>\n",
+       "      <td>-2.097673e+00</td>\n",
+       "      <td>-2.097228e+00</td>\n",
+       "      <td>-1.370592e+00</td>\n",
+       "      <td>-1.363591e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>-4.872857e-01</td>\n",
+       "      <td>-8.703341e-01</td>\n",
+       "      <td>-6.346179e-01</td>\n",
+       "      <td>-5.735604e-01</td>\n",
+       "      <td>-16672.215630</td>\n",
+       "      <td>123285.859216</td>\n",
+       "      <td>-3.726086e-11</td>\n",
+       "      <td>-27905.705077</td>\n",
+       "      <td>-4.775870e-01</td>\n",
+       "      <td>-4.773298e-01</td>\n",
+       "      <td>-9.354731e-01</td>\n",
+       "      <td>-9.289178e-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>6.561966e-01</td>\n",
+       "      <td>-1.740302e-01</td>\n",
+       "      <td>-6.346179e-01</td>\n",
+       "      <td>8.522464e-02</td>\n",
+       "      <td>-16672.215630</td>\n",
+       "      <td>123285.859216</td>\n",
+       "      <td>-3.726086e-11</td>\n",
+       "      <td>-27905.705077</td>\n",
+       "      <td>2.757101e-01</td>\n",
+       "      <td>2.758801e-01</td>\n",
+       "      <td>3.250343e-04</td>\n",
+       "      <td>5.922250e-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>6.561966e-01</td>\n",
+       "      <td>8.704258e-01</td>\n",
+       "      <td>1.575751e+00</td>\n",
+       "      <td>7.440096e-01</td>\n",
+       "      <td>-16672.215630</td>\n",
+       "      <td>123285.859216</td>\n",
+       "      <td>-3.726086e-11</td>\n",
+       "      <td>-27905.705077</td>\n",
+       "      <td>7.718942e-01</td>\n",
+       "      <td>7.720068e-01</td>\n",
+       "      <td>9.361215e-01</td>\n",
+       "      <td>9.407605e-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>1.174999e+00</td>\n",
+       "      <td>1.566730e+00</td>\n",
+       "      <td>1.575751e+00</td>\n",
+       "      <td>1.402795e+00</td>\n",
+       "      <td>-16664.762695</td>\n",
+       "      <td>123291.018916</td>\n",
+       "      <td>-3.726086e-11</td>\n",
+       "      <td>-27903.498569</td>\n",
+       "      <td>1.142499e+00</td>\n",
+       "      <td>1.142569e+00</td>\n",
+       "      <td>1.371242e+00</td>\n",
+       "      <td>1.375436e+00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            mu_mass   realization    sigma_mass  volume_fraction  \\\n",
+       "count  1.519560e+05  1.519560e+05  1.519560e+05     1.519560e+05   \n",
+       "mean   4.005054e-13 -4.189661e-16 -1.581754e-13    -4.139837e-14   \n",
+       "std    1.000003e+00  1.000003e+00  1.000003e+00     1.000003e+00   \n",
+       "min   -1.440188e+00 -1.566638e+00 -6.346179e-01    -1.891130e+00   \n",
+       "25%   -4.872857e-01 -8.703341e-01 -6.346179e-01    -5.735604e-01   \n",
+       "50%    6.561966e-01 -1.740302e-01 -6.346179e-01     8.522464e-02   \n",
+       "75%    6.561966e-01  8.704258e-01  1.575751e+00     7.440096e-01   \n",
+       "max    1.174999e+00  1.566730e+00  1.575751e+00     1.402795e+00   \n",
+       "\n",
+       "              y1_bwd         y1_fwd        y2_bwd         y2_fwd  \\\n",
+       "count  151956.000000  151956.000000  1.519560e+05  151956.000000   \n",
+       "mean   -16672.173597  123286.060910 -3.726086e-11  -27906.212024   \n",
+       "std         1.000003       1.000003  0.000000e+00       1.000003   \n",
+       "min    -16679.668565  123285.859216 -3.726086e-11  -27910.118093   \n",
+       "25%    -16672.215630  123285.859216 -3.726086e-11  -27905.705077   \n",
+       "50%    -16672.215630  123285.859216 -3.726086e-11  -27905.705077   \n",
+       "75%    -16672.215630  123285.859216 -3.726086e-11  -27905.705077   \n",
+       "max    -16664.762695  123291.018916 -3.726086e-11  -27903.498569   \n",
+       "\n",
+       "                  E            ES             P             S  \n",
+       "count  1.519560e+05  1.519560e+05  1.519560e+05  1.519560e+05  \n",
+       "mean  -1.619518e-12 -1.748794e-12 -1.301378e-12 -1.339471e-12  \n",
+       "std    1.000003e+00  1.000003e+00  1.000003e+00  1.000003e+00  \n",
+       "min   -2.097673e+00 -2.097228e+00 -1.370592e+00 -1.363591e+00  \n",
+       "25%   -4.775870e-01 -4.773298e-01 -9.354731e-01 -9.289178e-01  \n",
+       "50%    2.757101e-01  2.758801e-01  3.250343e-04  5.922250e-03  \n",
+       "75%    7.718942e-01  7.720068e-01  9.361215e-01  9.407605e-01  \n",
+       "max    1.142499e+00  1.142569e+00  1.371242e+00  1.375436e+00  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_trans.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "beta  -16672.173596747387\n",
-      "alpha  [0.         0.01628486 0.01509131 0.00394474 0.00410995]\n"
+      "beta  2.302585092994046\n",
+      "alpha  [0.00000000e+00 2.86187457e-18 2.65181540e-18 1.96211624e-17\n",
+      " 2.04219902e-17]\n"
      ]
     }
    ],
@@ -764,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -789,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -798,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
