test for different weights computation methods, not successful

--- a/src/Marie_test.ipynb
+++ b/src/Marie_test.ipynb
@@ -1345,7 +1345,7 @@
    "source": [
     "### Try with weird normalization\n",
     "\n",
-    "inverse of the conditional standard deviation √𝑉(𝑅|𝑋), is that: S = $\\sqrt(\\frac{SSE}{n-2})$, calculated on the complete dataset, or only per condition? "
+    "inverse of the conditional standard deviation √𝑉(𝑅|𝑋), is that: S = $\\sqrt{(\\frac{SSE}{n-2})}$, calculated on the complete dataset, or only per condition? "
    ]
   },
   {
