--- a/src/Marie_test.ipynb
+++ b/src/Marie_test.ipynb
@@ -1349,11 +1349,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# note de Charles: comme la formule donne du n-2 en dénominateur, il s'agit forcément du modèle \"simple\" donc \"only per condition\" d'après ta façon de dire: on a donc pour chaque transformation logarithmique des concentrations que le point est estimé à partir des résidus d'une régression du type:\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "log(\\frac{k_j}{k_{j,0}}) = \\beta_j + \\alpha_{E,j}log(\\frac{[E]}{[E]_0})\n",
+    "\\end{equation*}"
+   ]
   }
  ],
  "metadata": {
