--- a/src/exploration.ipynb
+++ b/src/exploration.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -32,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -259,7 +250,7 @@
        "4                 0.000147              0.2  "
       ]
      },
-     "execution_count": 128,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -281,7 +272,7 @@
        "(151956, 18)"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -321,7 +312,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -513,7 +504,7 @@
        "4              0.2  "
       ]
      },
-     "execution_count": 131,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -779,7 +770,7 @@
        "max                   0.000245         0.500000  "
       ]
      },
-     "execution_count": 132,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -790,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -862,7 +853,7 @@
        "Name: realization, Length: 151956, dtype: float64"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -904,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -931,7 +922,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -942,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -1078,7 +1069,7 @@
        "4   12.706535    3.091042  -9.761988 -11.959213  -9.923690  -8.825078  "
       ]
      },
-     "execution_count": 135,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1104,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -1176,7 +1167,7 @@
        "Name: realization, Length: 151956, dtype: float64"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1187,7 +1178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -1384,7 +1375,7 @@
        "max        -9.761988      -8.314252      -8.314252  "
       ]
      },
-     "execution_count": 137,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1402,7 +1393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1411,7 +1402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -1541,7 +1532,7 @@
        "4    3.091042  -9.761988 -11.959213  -9.923690  -8.825078  "
       ]
      },
-     "execution_count": 139,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1566,7 +1557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1583,7 +1574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1595,7 +1586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1604,7 +1595,7 @@
        "80190"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1640,7 +1631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1658,7 +1649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1679,7 +1670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 22,
    "metadata": {
     "scrolled": false
    },
@@ -1710,7 +1701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1719,7 +1710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1905,7 +1896,7 @@
        "max   -5.405184e+18 -5.405184e+18  "
       ]
      },
-     "execution_count": 147,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1921,7 +1912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1950,13 +1941,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
     "def estimate_weight(data,covariate):\n",
     "    \n",
-    "    y = data[\"log_k1_fwd\"]\n",
+    "    y = data[\"log_k1_bwd\"]\n",
     "    #regression only with a certain feature covariate\n",
     "    reg = LinearRegression()\n",
     "    X = create_regressors(data,covariate)\n",
@@ -1974,7 +1965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1987,8 +1978,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
-   "metadata": {},
+   "execution_count": 28,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2010,47 +2003,185 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "test withouth spliiting depending on the volume fraction covariate"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "covariates = ['E','S','ES','P']\n",
-    "weights_essai = []\n",
-    "\n",
-    "for name in covariates:\n",
-    "    weights_essai.append(estimate_weight(data_trans,name))"
+    "# count the different type of volume occupation\n",
+    "vfraction = data['volume_fraction'].values\n",
+    "unique = np.unique(vfraction)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[6.245012475730359e-19, 6.245012475730359e-19, 6.245012475730359e-19, 6.245012475730359e-19]\n"
+      "[1.529293643074293e-18, 1.529293643074293e-18, 1.529293643074293e-18, 1.529293643074293e-18]\n",
+      "[1.529293643074293e-18, 1.529293643074293e-18, 1.529293643074293e-18, 1.529293643074293e-18]\n",
+      "[1.529293643074293e-18, 1.529293643074293e-18, 1.529293643074293e-18, 1.529293643074293e-18]\n",
+      "[1.529293643074293e-18, 1.529293643074293e-18, 1.529293643074293e-18, 1.529293643074293e-18]\n",
+      "[1.529293643074293e-18, 1.529293643074293e-18, 1.529293643074293e-18, 1.529293643074293e-18]\n",
+      "[1.529293643074293e-18, 1.529293643074293e-18, 1.529293643074293e-18, 1.529293643074293e-18]\n"
      ]
     }
    ],
    "source": [
-    "print(weights_essai)"
+    "Weight = []\n",
+    "for volume in unique:\n",
+    "    w = []\n",
+    "    data = data_trans[data_trans['volume_fraction']==volume]\n",
+    "    for name in covariates:\n",
+    "        w.append(estimate_weight(data_test,name))\n",
+    "    Weight.append(w)\n",
+    "    print(w)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tab_weights2 = pd.DataFrame(Weight)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.4322071957924314e-18"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tab_weights[0].values[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.529293643074293e-18"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tab_weights2[0].values[0]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "still the same issue, we get the same weights for all the covariates"
+    "issue : same weight for all types of concentration"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "but it is still different for the different coefficient we are trying to estimate:\n",
+    "\n",
+    "for y1_forward : 2.4322071957924314e-18\n",
+    "\n",
+    "for y1_backward: 1.529293643074293e-18"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "let's try to do a weigthed regression with these weights:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.00000000e+00, 9.42997935e-36, 1.46106583e-36, 7.01675055e-36,\n",
+       "       1.36772257e-36])"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reg = LinearRegression()\n",
+    "\n",
+    "data_test_weighted = data_trans.copy()\n",
+    "data_test_weighted['E'] =  data_trans['E']/1.529293643074293e-18\n",
+    "data_test_weighted['ES'] = data_trans['ES']/1.529293643074293e-18\n",
+    "data_test_weighted['P'] =  data_trans['P']/1.529293643074293e-18\n",
+    "data_test_weighted['S'] =  data_trans['S']/1.529293643074293e-18\n",
+    "\n",
+    "\n",
+    "D = data_test_weighted[data_test_weighted[\"volume_fraction\"]==0.2]\n",
+    "X = create_regressors(D,covariates)\n",
+    "y = D[\"log_k1_bwd\"]\n",
+    "\n",
+    "reg.fit(X,y)\n",
+    "\n",
+    "reg.coef_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.00000000e+00, 6.16623197e-18, 9.55386061e-19, 4.58822972e-18,\n",
+       "       8.94349214e-19])"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reg.coef_/1.529293643074293e-18"
    ]
   }
  ],
