--- a/src/exploration.ipynb
+++ b/src/exploration.ipynb
@@ -2,9 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/charles/anaconda3/lib/python3.6/site-packages/statsmodels/compat/pandas.py:56: FutureWarning: The pandas.core.datetools module is deprecated and will be removed in a future version. Please use the pandas.tseries module instead.\n",
+      "  from pandas.core import datetools\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -17,13 +34,15 @@
     "from sklearn import svm\n",
     "import seaborn as sns\n",
     "\n",
+    "import statsmodels.api as sm\n",
+    "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -250,7 +269,7 @@
        "4                 0.000147              0.2  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -272,7 +291,7 @@
        "(151956, 18)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -312,7 +331,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -504,7 +523,7 @@
        "4              0.2  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -770,7 +789,7 @@
        "max                   0.000245         0.500000  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -781,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -853,7 +872,7 @@
        "Name: realization, Length: 151956, dtype: float64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -895,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -922,7 +941,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -933,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -1069,7 +1088,7 @@
        "4   12.706535    3.091042  -9.761988 -11.959213  -9.923690  -8.825078  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1095,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -1167,7 +1186,7 @@
        "Name: realization, Length: 151956, dtype: float64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1178,7 +1197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -1375,7 +1394,7 @@
        "max        -9.761988      -8.314252      -8.314252  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1393,7 +1412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1402,7 +1421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -1532,7 +1551,7 @@
        "4    3.091042  -9.761988 -11.959213  -9.923690  -8.825078  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1557,7 +1576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1574,7 +1593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1586,7 +1605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1595,7 +1614,7 @@
        "80190"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1631,7 +1650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1649,7 +1668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1670,7 +1689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {
     "scrolled": false
    },
@@ -1701,7 +1720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1710,7 +1729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1896,7 +1915,7 @@
        "max   -5.405184e+18 -5.405184e+18  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1912,7 +1931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1941,7 +1960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1965,7 +1984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1978,7 +1997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {
     "scrolled": true
    },
@@ -1987,7 +2006,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2.4322071957924314e-18, 2.4322071957924314e-18, 2.4322071957924314e-18, 2.4322071957924314e-18]\n"
+      "[1.529293643074293e-18, 1.529293643074293e-18, 1.529293643074293e-18, 1.529293643074293e-18]\n"
      ]
     }
    ],
@@ -2004,7 +2023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2015,7 +2034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2044,7 +2063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2053,20 +2072,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 33,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "2.4322071957924314e-18"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'tab_weights' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-33-1867f72829c6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtab_weights\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'tab_weights' is not defined"
+     ]
     }
    ],
    "source": [
@@ -2075,7 +2095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2084,7 +2104,7 @@
        "1.529293643074293e-18"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2127,7 +2147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 35,
    "metadata": {
     "scrolled": true
    },
@@ -2139,7 +2159,7 @@
        "       1.36772257e-36])"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2165,7 +2185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2175,13 +2195,77 @@
        "       8.94349214e-19])"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "reg.coef_/1.529293643074293e-18"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                    WLS Regression Results                                    \n",
+      "==============================================================================================\n",
+      "Dep. Variable:             log_k1_bwd   R-squared:          -99121196950569461207852384256.000\n",
+      "Model:                            WLS   Adj. R-squared:     -99131396003623775664924000256.000\n",
+      "Method:                 Least Squares   F-statistic:                                    -9719.\n",
+      "Date:                Sun, 18 Nov 2018   Prob (F-statistic):                               1.00\n",
+      "Time:                        19:46:29   Log-Likelihood:                                 52158.\n",
+      "No. Observations:               29160   AIC:                                        -1.043e+05\n",
+      "Df Residuals:                   29156   BIC:                                        -1.043e+05\n",
+      "Df Model:                           3                                                         \n",
+      "Covariance Type:            nonrobust                                                         \n",
+      "==============================================================================\n",
+      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "const        2.22e-38   2.65e-41    837.005      0.000    2.21e-38    2.23e-38\n",
+      "x1         -1.597e-19   3.44e-22   -464.710      0.000    -1.6e-19   -1.59e-19\n",
+      "x2         -7.829e-21   3.05e-22    -25.647      0.000   -8.43e-21   -7.23e-21\n",
+      "x3         -1.597e-19   3.44e-22   -464.710      0.000    -1.6e-19   -1.59e-19\n",
+      "x4         -7.829e-21   3.05e-22    -25.647      0.000   -8.43e-21   -7.23e-21\n",
+      "==============================================================================\n",
+      "Omnibus:                     4453.838   Durbin-Watson:                   2.021\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):             3591.086\n",
+      "Skew:                          -0.768   Prob(JB):                         0.00\n",
+      "Kurtosis:                       2.228   Cond. No.                     7.63e+20\n",
+      "==============================================================================\n",
+      "\n",
+      "Warnings:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+      "[2] The condition number is large, 7.63e+20. This might indicate that there are\n",
+      "strong multicollinearity or other numerical problems.\n"
+     ]
+    }
+   ],
+   "source": [
+    "w = 1#.529293643074293e-18\n",
+    "\n",
+    "mod_wls = sm.WLS(y, X, weights=1./(w))\n",
+    "res_wls = mod_wls.fit()\n",
+    "print(res_wls.summary())"
    ]
   }
  ],
